<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBarRegister"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/new_account"
                android:textColor="#FF0000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/register" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="#0E0D0D"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="#0E0D0D"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="#0E0D0D"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#0E0D0D"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#0E0D0D"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/gender"
                android:inputType="textPersonName"
                android:textColor="#0E0D0D"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTxtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:textColor="#0E0D0D"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="textPersonName"
                android:textColor="#0E0D0D"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:textColor="#0E0D0D"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#FF0000"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</layout>